fix: added a gap between videos in must watch section

--- a/src/Components/Styles/VideoPage.css
+++ b/src/Components/Styles/VideoPage.css
@@ -103,6 +103,10 @@
   gap: 1.5rem;
 }
 
+.must-watch-videos {
+  gap: 2rem;
+}
+
 @media screen and (max-width: 900px) {
   .misc-container {
     flex-direction: column;
